2021-09-13 Danilo Chang

	* Implement command: compare
	* Implement command: resizeWindow
	* Merge code from Christian (Refactoring)

2021-09-12 Danilo Chang

	* Implement command: HOGDescriptor
	* Implement command: countNonZero
	* Implement command: fitEllipse, moments

2021-09-11 Danilo Chang

	* Add flag --with-sift to enable/disable SIFT command code
	* Merge code from Christian (Refactoring)
	* Bump version to v0.7

2021-09-10 Danilo Chang

	* Update FlannBasedMatcher for SIFT command
	* Implement command: SIFT (required version 4.4)
	* Implement command: StereoSGBM
	* Implement command: FlannBasedMatcher
	* Implement command: AgastFeatureDetector
	* Implement command: AKAZE, BRISK

2021-09-09 Danilo Chang

	* Implement command: SimpleBlobDetector
	* Implement command: StereoBM
	* Implement command: sqrt, exp, hconcat, vconcat

2021-09-08 Danilo Chang

	* Add HDR imaging related commands
	* Bump version to v0.6
	* Implement command: findHomography, perspectiveTransform

2021-09-07 Danilo Chang

	* Implement command: FastFeatureDetector, ORB, BFMatcher

2021-09-06 Danilo Chang

	* Implement command: cornerSubPix, cornerHarris

2021-09-05 Danilo Chang

	* Bump version to v0.5
	* Implement command: sum, pow, abs, mulSpectrums
	* Update bitwise_and, bitwise_or, bitwise_xor and bitwise_not command

2021-09-04 Danilo Chang

	* Implement command: selectROI
	* Implement command: textureFlattening, seamlessClone
	* Implement command: decolor, colorChange, illuminationChange
	* Implement command: detailEnhance, edgePreservingFilter, pencilSketch

2021-09-03 Danilo Chang

	* Implement command: fastNlMeansDenoisingColored, inpaint, stylization
	* Implement command: convexHull, remap
	* Implement command: QRCodeDetector

2021-09-02 Danilo Chang

	* Implement command: MATRIX diag, colRange, rowRange, inv, *
	* Implement command: ::cv::getRectSubPix, ::cv::getAffineTransform

2021-08-30 Danilo Chang

	* Implement command: meanShift and CamShift

2021-08-28 Danilo Chang
